# django-nuxtjs

./: README.md  pyproject.toml
backend/: settings.py  urls.py
backend/core/: router.py
backend/core/migrations/: 0001_initial.py
backend/core/models/: choice.py  question.py
backend/core/serializers/: choice.py  question.py
backend/core/views/: question.py
frontend/: nuxt.config.js  package.json
frontend/components/questions/: FormChoice.vue  FormQuestion.vue  ListChoices.vue  ListQuestions.vue
frontend/layouts/: default.vue
frontend/pages/: index.vue
frontend/pages/admin/: question.vue
