[tool.poetry]
name = "django-nuxtjs"
version = "0.1.0"
description = ""
authors = ["Jesus Herrera <jesusmaherrera@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
Django = "^3.1.6"
djangorestframework = "^3.12.2"
djangorestframework-simplejwt = "^4.6.0"
django-cors-headers = "^3.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
